[gd_scene load_steps=6 format=3 uid="uid://cccbqcydu2h30"]

[ext_resource type="Script" uid="uid://k3ywkgdh8jp4" path="res://src/activities/day_selector.gd" id="1_m4qrk"]
[ext_resource type="Texture2D" uid="uid://bicdveuejq1fv" path="res://resources/buttons/next.png" id="1_sagxx"]
[ext_resource type="Texture2D" uid="uid://cd6gqqp4yin8d" path="res://resources/buttons/next_hover.png" id="2_swmp7"]
[ext_resource type="Texture2D" uid="uid://bwwed67eogoji" path="res://resources/buttons/rotate-right.svg" id="4_orpo2"]
[ext_resource type="Texture2D" uid="uid://stmvocdasq7v" path="res://resources/buttons/rotate-right-hover.svg" id="5_fsdv8"]

[node name="DaySelector" type="HBoxContainer"]
size_flags_horizontal = 4
script = ExtResource("1_m4qrk")

[node name="PreviousContainer" type="BoxContainer" parent="."]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="PreviousDayButton" type="TextureButton" parent="PreviousContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "To previous day."
texture_normal = ExtResource("1_sagxx")
texture_hover = ExtResource("2_swmp7")
ignore_texture_size = true
stretch_mode = 5

[node name="SelectedDay" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="SelectedDay"]
layout_mode = 2
theme_override_constants/margin_top = 15

[node name="DateLabel" type="Label" parent="SelectedDay/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
text = "03.05.24"
horizontal_alignment = 1

[node name="ResetDateContainer" type="BoxContainer" parent="SelectedDay"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
alignment = 2

[node name="ResetDateButton" type="TextureButton" parent="SelectedDay/ResetDateContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_horizontal = 10
tooltip_text = "Go back to today."
focus_mode = 0
texture_normal = ExtResource("4_orpo2")
texture_hover = ExtResource("5_fsdv8")
ignore_texture_size = true
stretch_mode = 4

[node name="NextContainer" type="BoxContainer" parent="."]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="NextDayButton" type="TextureButton" parent="NextContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "To next day."
texture_normal = ExtResource("1_sagxx")
texture_hover = ExtResource("2_swmp7")
ignore_texture_size = true
stretch_mode = 5
flip_h = true

[connection signal="pressed" from="PreviousContainer/PreviousDayButton" to="." method="_on_previous_day_button_pressed"]
[connection signal="pressed" from="SelectedDay/ResetDateContainer/ResetDateButton" to="." method="_on_reset_date_button_pressed"]
[connection signal="pressed" from="NextContainer/NextDayButton" to="." method="_on_next_day_button_pressed"]
